--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   body, html {
     font-family: 'Segoe UI', sans-serif;
     height: 100vh;
-    background: url("/home/r-31/Documents/tugasfirza/bg-login.png") no-repeat center center/cover;
+    background: url("bglogin.png") no-repeat center center/cover;
     background-color: rgb(47, 161, 255);
     display: flex;
     align-items: center;
